# GateFlow

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: AGENT_PITFALLS.md  AI_FPGA_REAL_USAGE_TEST_PLAN.md  CAPABILITIES.json  CAPABILITIES.md  CLI_USAGE.md  PATH_SETUP.md  PYTHON_SDK.md  RELEASE_TEST_PLAN.md  SPRINT_PLAN.md  TCP_PROTOCOL.md  TERMINOLOGY.md  block_design_module.md  path_conversion_implementation.md
examples/: README.md  block_design_example.py  build_zed_led.py  build_zed_led_tcp.py  hardware_debug_runtime_example.py  ip_query_simulation_example.py  path_conversion_demo.py  report_checks_example.py  settings_example.py  simple_project.py  simulation_debug_example.py  smart_connect_example.py  zynq_template_example.py
examples/blink_led/: blink_led.v  blink_led.xdc  build.py  tb_blink_led.v
src/gateflow/: __init__.py  api.py  capabilities.py  cli.py  config.py  engine.py  errors.py  execution_context.py  server.py  settings.py
src/gateflow/embedded/: __init__.py  non_project.py  providers.py  vitis.py  xsct.py
src/gateflow/modules/: __init__.py  base.py
src/gateflow/modules/clock/: __init__.py  clk_wiz.py
src/gateflow/modules/debug/: __init__.py
src/gateflow/modules/interface/: __init__.py  axi_gpio.py  axi_uart.py
src/gateflow/modules/memory/: __init__.py  axi_dma.py
src/gateflow/templates/: __init__.py  platform_registry.py
src/gateflow/tools/: __init__.py  bd_advanced_tools.py  block_design_tools.py  build_tools.py  constraint_tools.py  context_utils.py  embedded_tools.py  file_tools.py  hardware_tools.py  ip_tools.py  project_tools.py  registry.py  result_utils.py  simulation_tools.py  tcl_tools.py
src/gateflow/utils/: __init__.py  auto_config.py  parser.py  path_utils.py  sandbox.py  terminology.py
src/gateflow/vivado/: __init__.py  block_design.py  constraints.py  hardware.py  implementation.py  ip_config.py  ip_utils.py  project.py  result_utils.py  simulation.py  synthesis.py  tcl_engine.py  tcl_server.py  tcp_client.py
tests/: __init__.py  conftest.py  run_basic_tests.py  run_pytest.py  test_api_high_frequency.py  test_auto_config.py  test_bd_advanced_tools_phase2.py  test_block_design.py  test_block_design_tools.py  test_capabilities.py  test_capability_docs_sync.py  test_cli.py  test_constraint_tools.py  test_constraints.py  test_embedded_providers.py  test_errors.py  test_event_loop_fix.py  test_examples_phase3.py  test_examples_runtime_phase3.py  test_execution_context.py  test_file_tools_sandbox.py  test_gui_session.py  test_hardware.py  test_hardware_tools.py  test_ip_config.py  test_ip_tools.py  test_ip_utils.py  test_parser.py  test_path_utils.py  test_phase4_routing.py  test_project.py  test_run_observability.py  test_security_policy.py  test_settings.py  test_simulation.py  test_simulation_tools.py  test_smart_connect.py  test_tcl_engine.py  test_tcl_server_installer.py  test_tcl_tools_policy.py  (+7 more)
tests/ai_real_usage/: __init__.py  helpers.py  test_error_recovery_flow.py  test_gui_session_smoke.py  test_hardware_debug_flow.py  test_install_and_preflight.py  test_job1_software_closure_flow.py  test_minimal_project_flow.py  test_reports_and_checks_flow.py  test_run_observability_tcp_smoke.py  test_simulation_debug_flow.py  test_zedboard_ps_pl_flow.py
tests/hardware_smoke/: __init__.py  test_hardware_release_smoke.py
tests/release_gate/: __init__.py  release_summary.py  test_build_flow_release_gate.py  test_cli_release_gate.py  test_example_runtime_release_gate.py  test_report_snapshot_release_gate.py
tests/release_gate/snapshots/: report_snapshots.json
(+9 files in other folders)
