[project]
name = "gateflow"
version = "0.1.0"
description = "AI-assisted MCP server and Python SDK for AMD Vivado FPGA workflows"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "GateFlow Team", email = "levelup718@126.com" }
]
maintainers = [
    { name = "GateFlow Team", email = "levelup718@126.com" }
]
keywords = ["mcp", "vivado", "fpga", "eda", "ai", "model-context-protocol", "xilinx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

[project.scripts]
gateflow = "gateflow.cli:main"
gateflow-server = "gateflow.server:main"

[project.urls]
Homepage = "https://github.com/Firo718/GateFlow"
Documentation = "https://github.com/Firo718/GateFlow#readme"
Repository = "https://github.com/Firo718/GateFlow"
Issues = "https://github.com/Firo718/GateFlow/issues"
Changelog = "https://github.com/Firo718/GateFlow/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gateflow"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/gateflow",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]
exclude = [
    "/.github",
    "/.pytest_cache",
    "/__pycache__",
    "*.pyc",
    "*.pyo",
    "*.pyd",
]

[tool.hatch.version]
path = "src/gateflow/__init__.py"

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "vivado: marks tests as requiring Vivado (deselect with '-m \"not vivado\"')",
    "release_gate: marks tests as release-gate verification",
    "hardware_smoke: marks tests as real hardware smoke verification",
    "ai_real_usage: marks tests as AI-driven real FPGA usage verification",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.coverage.run]
source = ["src/gateflow"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
